[tool.poetry]
name = "web-hw2"
version = "0.1.0"
description = ""
authors = ["Anastasia-Makarova <140186425+Anastasia-Makarova@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
